--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>To DO</title>
-  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
   <link rel="stylesheet" type="" href="styles.css">
 </head>
 <body class="scanline-overlay">
 
   <div class="title">
     <h1>// Protocols</h1>
-    <h2>>>TaskGrid</h2>
+    <h2 class="grid">>>TaskGrid</h2>
   </div>
 
   <div class="board">
@@ -44,8 +43,11 @@
 
   </div>
 
-  <script src="render.js" > </script>
-  <script src="content.js"> </script>
+  <link rel="stylesheet" href="./node_modules/quill/dist/quill.snow.css">
+
+  <script src="./node_modules/quill/dist/quill.js"></script> 
+  <script type="module" src="./render.js"></script>
+  <script type="module" src="./content.js"></script>
 
 </body>
 </html>
